Allow override the hostname that perfmon returns
Perfmon returns the short name, while most people on the Linux side use
the FQDN.  This allows you to match windows hosts with Linux hosts
running collectd.

--- a/templates/default/StatsToGraphiteConfig.xml.erb
+++ b/templates/default/StatsToGraphiteConfig.xml.erb
@@ -6,7 +6,7 @@
     <MetricPath><%= node['graphite_powershell_functions']['MetricPath'].gsub(/.$/, '') -%></MetricPath>
     <MetricSendIntervalSeconds><%= node['graphite_powershell_functions']['MetricSendIntervalSeconds'] -%></MetricSendIntervalSeconds>
     <TimeZoneOfGraphiteServer><%= node['graphite_powershell_functions']['TimeZoneOfGraphiteServer'] -%></TimeZoneOfGraphiteServer>
-    <Hostname><%= node.fqdn -%></Hostname>
+    <Hostname><%= node['graphite_powershell_functions']['hostname'] -%></Hostname>
   </Graphite>
   <PerformanceCounters>
 <% node['graphite_powershell_functions']['PerformanceCounters'].each do |counter| -%>
